[gd_scene load_steps=10 format=3 uid="uid://im5hs0418wmn"]

[ext_resource type="Script" uid="uid://dcbsbxx6kpsks" path="res://tanks/Tank.gd" id="1_axr7l"]
[ext_resource type="PackedScene" uid="uid://d00i17qev837c" path="res://effects/explosion.tscn" id="2_26cld"]
[ext_resource type="PackedScene" uid="uid://b1eeu1khv7i1k" path="res://effects/SpawnSmoke.tscn" id="3_2lshb"]
[ext_resource type="AudioStream" uid="uid://cyf3r0mch45n5" path="res://assets/SFX/pick-up-sfx-38516.mp3" id="4_rwb3l"]
[ext_resource type="AudioStream" uid="uid://dyd4gpinlmcf6" path="res://assets/SFX/TankExplosion.wav" id="4_uxlm5"]
[ext_resource type="PackedScene" uid="uid://dv8nd4wy65m46" path="res://effects/Smoke.tscn" id="6_gmcwg"]

[sub_resource type="Animation" id="Animation_2lshb"]
resource_name = "init"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rwb3l"]
resource_name = "muzzle_flash"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.07, 0.12, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmcwg"]
_data = {
&"init": SubResource("Animation_2lshb"),
&"muzzle_flash": SubResource("Animation_rwb3l")
}

[node name="Tank" type="CharacterBody2D"]
script = ExtResource("1_axr7l")
max_health = 100

[node name="Body" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)

[node name="Turret" type="Sprite2D" parent="."]

[node name="Flash" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0.19963557)
scale = Vector2(0.39927703, 0.39927703)
region_enabled = true

[node name="Muzzle" type="Marker2D" parent="Turret"]

[node name="Cooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gmcwg")
}
autoplay = "init"

[node name="Explosion" parent="." instance=ExtResource("2_26cld")]
visible = false
scale = Vector2(0.99999994, 0.99999994)
animation = &"fire"

[node name="SpawnSmoke" parent="." instance=ExtResource("3_2lshb")]
visible = false
rotation = -0.0067208475
scale = Vector2(0.99999994, 0.99999994)

[node name="ItemGet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rwb3l")
volume_db = 10.0

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_uxlm5")
volume_db = 15.0

[node name="Smoke" parent="." instance=ExtResource("6_gmcwg")]
show_behind_parent = true
position = Vector2(-19, 0)
rotation = -3.1415927

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
